--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -16,20 +16,25 @@
                 </ng-template>
             </p-toolbar> -->
 
-            <p-table #dt [value]="customers" [columns]="cols" responsiveLayout="scroll" [rows]="10" [globalFilterFields]="['name','country.name','representative.name','status']" [paginator]="false" [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [(selection)]="selectedProducts" selectionMode="multiple" [rowHover]="true" dataKey="id">
+            <p-table #dt [value]="customers"  [columns]="cols" [globalFilterFields]="['name','country.name','representative.name','status']" scrollDirection="both" [scrollable]="true" scrollHeight="400px" styleClass="mt-3" responsiveLayout="scroll" [resizableColumns]="true" 
+            styleClass="p-datatable-gridlines" 
+            [tableStyle]="{'min-width': '50rem'}">
                 <ng-template pTemplate="caption">
-                    <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center">
+                    <div class="flex flex-column md:flex-row md:justify-content-between md:align-items-center" style="text-align: left;">
                         <!-- <h5 class="m-0">Manage Products</h5> -->
                         <span class="block mt-2 md:mt-0 p-input-icon-left">
                             <i class="pi pi-search"></i>
                             <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Search..."  class="w-full sm:w-auto"/>
                         </span>
+                        <!-- <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success mr-2" (click)="openNew()"></button> -->
+                        <!-- <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help" (click)="dt.exportCSV()"></button> -->
                     </div>
+                    
                 </ng-template>
                 <ng-template pTemplate="header" let-columns>
                     <tr>
-                        <th *ngFor="let col of columns">
-                            {{ col.header }}
+                        <th *ngFor="let col of columns" [pSortableColumn]="col.field" [pSortableColumnDisabled]="!col.isSort">
+                            {{ col.header }} <p-sortIcon *ngIf="col.isSort" [field]="col.field" />
                         </th>
                     </tr>
                 </ng-template>
@@ -39,6 +44,11 @@
                             {{ rowData[col.field] }}
                         </td>
                     </tr>
+                </ng-template>
+                <ng-template pTemplate="summary">
+                    <div class="flex align-items-center justify-content-between">
+                        In total there are {{customers ? customers.length : 0 }} customers.
+                    </div>
                 </ng-template>
             </p-table>
         </div>
