--- a/src/app/demo/components/notfound/notfound.component.html
+++ b/src/app/demo/components/notfound/notfound.component.html
@@ -6,16 +6,15 @@
                 <span class="text-blue-500 font-bold text-3xl">404</span>
                 <h1 class="text-900 font-bold text-3xl lg:text-5xl mb-2">Not Found</h1>
                 <div class="text-600 mb-5">Requested resource is not available.</div>
-                <a [routerLink]="['/']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
+                <a [routerLink]="['/home']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
                     <span class="flex justify-content-center align-items-center bg-cyan-400 border-round" style="height:3.5rem; width:3.5rem;">
-                        <i class="text-50 pi pi-fw pi-table text-2xl"></i>
+                        <i class="text-50 pi pi-fw pi-home text-2xl"></i>
                     </span>
                     <span class="ml-4 flex flex-column">
-                        <span class="text-900 lg:text-xl font-medium mb-0 block">Frequently Asked Questions</span>
-                        <span class="text-600 lg:text-xl">Ultricies mi quis hendrerit dolor.</span>
+                        <span class="text-900 lg:text-xl font-medium mb-0 block">Back To Home</span>
                     </span>
                 </a>
-                <a [routerLink]="['/']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
+                <!-- <a [routerLink]="['/']" class="w-full flex align-items-center py-5 border-300 border-bottom-1">
                     <span class="flex justify-content-center align-items-center bg-orange-400 border-round" style="height:3.5rem; width:3.5rem;">
                         <i class="pi pi-fw pi-question-circle text-50 text-2xl"></i>
                     </span>
@@ -32,7 +31,7 @@
                         <span class="text-900 lg:text-xl font-medium mb-0">Permission Manager</span>
                         <span class="text-600 lg:text-xl">Accumsan in nisl nisi scelerisque</span>
                     </span>
-                </a>
+                </a> -->
             </div>
         </div>
     </div>
